backend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weakspotter-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weakspotter-backend
  template:
    metadata:
      labels:
        app: weakspotter-backend
    spec:
      serviceAccountName: weakspotter-service-account
      containers:
        - name: backend
          ports:
            - containerPort: 8000
