backend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weakspotter-backend
spec:
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: weakspotter-backend
  type: ClusterIP
