backend/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weakspotter-backend-ingress
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-dns
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    traefik.ingress.kubernetes.io/router.priority: "100"
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: weakspotter-backend
                port:
                  number: 8000
  tls:
    - secretName: weakspotter-tls
